# zero2prod

./: .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.cargo/: config.toml
.sqlx/: query-22a98ad814f061d220be94be07d03d3001afb1bbc2e5eb5ad90b5a33d8b99cce.json  query-609fb67004cbf49b0921f181eff00e6aaf368388e1939dc9be4b5c9c1941730f.json
configuration/: base.yaml  production.yaml
migrations/: 20230821005631_create_subscriptions_table.sql  20230827024808_make_status_not_null_in_subscriptions.sql  20230827024911_create_subscription_tokens_table.sql  20240218230944_create_users_table.sql  20240221054109_seed_user.sql  20240224200643_create_newsletter_issues_table.sql  20240224201339_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  startup.sh
src/: auth.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: mod.rs  persistence.rs
src/routes/: home.html  mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
