[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
anyhow = "1"
config = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.4", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tracing-actix-web = "0.7.6"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
garde = { version = "0.18.0", default-features = false, features = [
  "email",
  "derive",
] }
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies"
] }
serde_json = "1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.50"
base64 = "0.21.7"
sha3 = "0.10.8"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.0", features = ["redis-rs-tls-session"] }

[dev-dependencies]
claims = "0.7"
quickcheck = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
fake = "2.3"
linkify = "0.10.0"
